8261730: C2 compilation fails with assert(store->find_edge(load) != -1) failed: missing precedence edge

Relax PhaseCFG::insert_anti_dependences() assertion to accept the case where a
store implements an implicit null check and a load is placed in the null block.